--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=eureka-server
 server.port=8761
-eureka.client.register-with-eureka=false
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
