--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=products-service
 server.port=8080
 management.endpoints.web.exposure.include=health,info
-management.info.env.enabled=true
 info.app.name=products-service
 info.app.description=Servicio para administración de productos
 info.app.version=1.0.0
 management.context-path=http://localhost:8080/actuator
+eureka.instance.hostname=localhost
 eureka.instance.statusPageUrlPath=${management.context-path}/info
 eureka.instance.healthCheckUrlPath=${management.context-path}/health
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+spring.config.import=optional:configserver:
+
