Instace Id added.

--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=checkout-service
-server.port=8081
+instance_port=8090
+server.port=${instance_port}
 management.endpoints.web.exposure.include=health,info
 info.app.name=checkout-service
 info.app.description=Servicio para el checkout
 info.app.version=1.0.0
-management.context-path=http://localhost:8081/actuator
+management.context-path=http://localhost:${instance_port}/actuator
 eureka.instance.hostname=localhost
 eureka.instance.statusPageUrlPath=${management.context-path}/info
 eureka.instance.healthCheckUrlPath=${management.context-path}/health
