--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=products-service
-server.port=8080
+instance_port=8081
+server.port=${instance_port}
 management.endpoints.web.exposure.include=health,info
 info.app.name=products-service
 info.app.description=Servicio para administración de productos
 info.app.version=1.0.0
-management.context-path=http://localhost:8080/actuator
+management.context-path=http://localhost:${instance_port}/actuator
 eureka.instance.hostname=localhost
 eureka.instance.statusPageUrlPath=${management.context-path}/info
 eureka.instance.healthCheckUrlPath=${management.context-path}/health
