Routing server added.

--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -11,4 +11,5 @@ eureka.instance.statusPageUrlPath=${management.context-path}/info
 eureka.instance.healthCheckUrlPath=${management.context-path}/health
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
+spring.cloud.loadbalancer.configurations=weighted
 spring.config.import=optional:configserver:
