--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ management.context-path=http://localhost:${instance_port}/actuator
 eureka.instance.hostname=localhost
 eureka.instance.statusPageUrlPath=${management.context-path}/info
 eureka.instance.healthCheckUrlPath=${management.context-path}/health
+eureka.instance.metadata-map.weight=20
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
-
