--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 spring.cloud.loadbalancer.configurations=weighted
 spring.config.import=optional:configserver:
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8000/realms/test_realm
