Circuit breaker implemented.

--- a/checkout-service/src/main/resources/application.properties
+++ b/checkout-service/src/main/resources/application.properties
@@ -14,3 +14,14 @@ spring.cloud.config.discovery.serviceId=config-server
 spring.cloud.loadbalancer.configurations=weighted
 spring.config.import=optional:configserver:
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8000/realms/test_realm
+
+resilience4j.circuitbreaker.instances.product.allowHealthIndicatorToFail=false
+resilience4j.circuitbreaker.instances.product.registerHealthIndicator=true
+
+resilience4j.circuitbreaker.instances.product.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.product.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.product.failureRateThreshold=50
+
+resilience4j.circuitbreaker.instances.product.waitDurationInOpenState=15000
+resilience4j.circuitbreaker.instances.product.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.product.automaticTransitionFromOpenToHalfOpenEnabled=true
